# example-django-todo

./: Makefile  README.md  docker-compose.yml
cache/: Dockerfile
web/: .gitignore  Dockerfile  generate_env.py  pyproject.toml
web/accounts/: urls.py  views.py
web/accounts/templates/: index.html
web/accounts/templates/accounts/: index.html  signin.html  signup.html
web/accounts/tests/: test_v_index.py  test_v_signin.py  test_v_signup.py
web/config/: urls.py
web/config/settings/: common.py  local.py  production.py  test.py
web/todos/: admin.py  forms.py  models.py  urls.py  views.py
web/todos/migrations/: 0001_initial.py  0002_alter_todo_status.py  0003_todo_updated_at.py  0004_alter_todo_status.py
web/todos/templates/todos/: create.html  delete.html  detail.html  index.html  update.html
