[tool.poetry]
name = "django-todo"
version = "0.1.0"
description = "example django todo application"
authors = ["Yuya Morimoto <yuya-morimoto@zero-hack.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.5"
taskipy = "^1.12.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start_local = "python manage.py runserver 0:8000"