[tool.poetry]
name = "django-todo"
version = "0.1.0"
description = "example django todo application"
authors = ["Yuya Morimoto <yuya-morimoto@zero-hack.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.5"
taskipy = "^1.12.0"
django-environ = "^0.11.2"
psycopg = "^3.1.10"
redis = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
mypy = "^1.5.1"
django-stubs = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
show_error_codes = true
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.taskipy.tasks]
generate_env = "python generate_env.py"
start_local = "python manage.py runserver 0:8000"
format = "isort . && black ."
lint = "pflake8 && mypy ."
check_all = "task format && task lint"